--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <li><a href="#skills">Skills</a></li>
                             <li><a href="#contact">Contact</a></li>
                             <li>
-                                <a href="/CV_BaniRijal.pdf" target="_blank">
+                                <a href="/CV_BaniRijalBarruFaza.pdf" target="_blank">
                                     <button class="btn">Resume</button></a>
                             </li>
                         </ul>
@@ -93,7 +93,7 @@
                 <div class="grid-3">
                     <div class="portofolio">
                         <div class="portofolio-cover">
-                            <img src="/images/porto1.jpg" alt="Portofolio 1">
+                            <img src="/images/porto-1.png" alt="Portofolio 1">
                         </div>
                         <div class="portofolio-info">
                             <div class="portofolio-title">
@@ -109,7 +109,30 @@
                             </div>
                             <p>
                                 Sejauh ini, website portofolio ini adalah project profesional yang saya buat.
-                                Saya juga pernah membuat sebuah game, tetapi game tersebut saya buat sebagai bahan belajar dan tidak saya publikasikan.
+                                Saya pernah membuat sebuah game, tetapi game tersebut saya buat sebagai bahan belajar dan tidak saya publikasikan.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="portofolio">
+                        <div class="portofolio-cover">
+                            <img src="/images/porto-2.png" alt="Portofolio 1">
+                        </div>
+                        <div class="portofolio-info">
+                            <div class="portofolio-title">
+                                <h4>Website Peradilan Indonesia</h4>
+                                <!-- <a href="/" class="portofolio-link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M13.723 18.654l-3.61 3.609c-2.316 2.315-6.063 2.315-8.378 0-1.12-1.118-1.735-2.606-1.735-4.188 0-1.582.615-3.07 1.734-4.189l4.866-4.865c2.355-2.355 6.114-2.262 8.377 0 .453.453.81.973 1.089 1.527l-1.593 1.592c-.18-.613-.5-1.189-.964-1.652-1.448-1.448-3.93-1.51-5.439-.001l-.001.002-4.867 4.865c-1.5 1.499-1.5 3.941 0 5.44 1.517 1.517 3.958 1.488 5.442 0l2.425-2.424c.993.284 1.791.335 2.654.284zm.161-16.918l-3.574 3.576c.847-.05 1.655 0 2.653.283l2.393-2.389c1.498-1.502 3.94-1.5 5.44-.001 1.517 1.518 1.486 3.959 0 5.442l-4.831 4.831-.003.002c-1.438 1.437-3.886 1.552-5.439-.002-.473-.474-.785-1.042-.956-1.643l-.084.068-1.517 1.515c.28.556.635 1.075 1.088 1.528 2.245 2.245 6.004 2.374 8.378 0l4.832-4.831c2.314-2.316 2.316-6.062-.001-8.377-2.317-2.321-6.067-2.313-8.379-.002z"/></svg>
+                                </a> -->
+                            </div>
+                            <div class="portofolio-tags">
+                                <div>HTML</div>
+                                <div>CSS</div>
+                                <div>PHP</div>
+                                <div>Bootstrap</div>
+                            </div>
+                            <p>
+                                Website ini merupakan website tentang Peradilan Indonesia yang dapat melakukan Create, Update, dan Delete.
+                                Website ini saya buat sebagai tugas kuliah.
                             </p>
                         </div>
                     </div>
@@ -216,7 +239,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-3 7h-1.924c-.615 0-1.076.252-1.076.889v1.111h3l-.238 3h-2.762v8h-3v-8h-2v-3h2v-1.923c0-2.022 1.064-3.077 3.461-3.077h2.539v3z"/></svg>
                 </a>
             </div>
-            <p>&copy; 2024 - Bani Rijal Barru Faza</p>
+            <p>&copy; 2023 - Bani Rijal Barru Faza</p>
         </footer>
 
         <script src="/scripts/main.js"></script>
